External displays don't always turn on when connecting to docking station
Almost every time, when I re-plug my laptop to the docking station, the external screens don't "wake up", I have to unplug and re-plug the docking station a couple times until it works.
It seems not to happen when I just booted the laptop, but this time, I had a case where the screens woke up, displayed something, and then rejected the signal. So I assume the timings weren't correct somehow.
I have ThinkPad X1 Carbon Gen 9 (20XWCTO1WW) with a 11th Gen Intel® Core™ i7-1185G7 × 8 (TGL GT2).
The docking station is a Lenovo Thunderbolt 3 Dock Gen 2 with the latest firmware version (updated using a Windows computer, this one seems to still be in "testing" in LVFS), but I had the problem before the update too.
I'm running Fedora 39 Workstation with the standard GNOME/Mutter/Wayland setup, currently with kernel 6.7.4-200.fc39.x86_64, but this has been happening for a while.
Here is the request information:
- uname -a:
Linux TesterTop5 6.7.4-200.fc39.x86_64 #1 SMP PREEMPT_DYNAMIC Mon Feb 5 22:21:14 UTC 2024 x86_64 GNU/Linux
- lspci -vnn -d :*:0300
- vbt
- xrandr-verbose.txt after everything works
- dmesg.txt, it corresponds to booting the comu